feat: added makes and models list, card, add/edit form components.
Added the code and styling for the makes and models components.
Additionally added a few more properties on the VeichleModel object
to increase the amount of filtering options, and content in general.
Added all the CRUD methods in the VeichleStore.

--- a/src/common/style/_mixins.scss
+++ b/src/common/style/_mixins.scss
@@ -7,6 +7,7 @@ $breakpoints-up: (
 $breakpoints-down: (
   'mobile': '23.4375em',
   'small': '39.9375em',
+  'smallish': '53.125em',
   'medium': '71.8125em',
   'large': '87.4375em',
 );
