--- a/src/common/style/_variables.scss
+++ b/src/common/style/_variables.scss
@@ -20,6 +20,7 @@
   --clr-purple-light: hsl(300, 100%, 80%);
   --clr-orange: hsl(35, 100%, 64%);
   --clr-red: hsl(0, 100%, 60%);
+  --clr-red-light: hsl(0, 100%, 72%);
 
   //FONTS
   --font-primary: 'Roboto', sans-serif;
