--- a/src/layouts/Navbar.scss
+++ b/src/layouts/Navbar.scss
@@ -3,13 +3,30 @@
 
 .navbar {
   background-color: var(--clr-black);
-  padding: rem(20) rem(40);
+  padding: rem(20) rem(60);
   color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   &__logo {
     display: flex;
     align-items: center;
     gap: rem(10);
     font-size: var(--font-700);
+  }
+
+  &__links {
+    display: flex;
+    gap: rem(50);
+  }
+
+  &__link {
+    font-size: var(--font-400);
+    padding: rem(10) rem(20);
+    transition: all 0.4s;
+    &:hover {
+      background-color: rgb(65, 65, 65);
+    }
   }
 }
