--- a/src/components/VeichleForm.scss
+++ b/src/components/VeichleForm.scss
@@ -1,10 +1,11 @@
-@use '../../common/style/index' as *;
+@use '../common/style/index' as *;
 
 .veichle-form {
   &__container {
     display: flex;
     flex-direction: column;
     padding-top: rem(30);
+    position: relative;
 
     align-items: center;
     height: 100%;
@@ -21,9 +22,8 @@
   &__content {
     display: flex;
     flex-direction: column;
-    gap: rem(40);
-
-    grid-template-columns: 1.5fr 1fr;
+    gap: rem(30);
+    padding-bottom: rem(30);
   }
 
   &__img {
@@ -33,7 +33,6 @@
       border: 1px solid var(--clr-grey-3);
       border-radius: 5px;
       position: relative;
-
       align-self: center;
 
       p {
@@ -47,33 +46,16 @@
     }
     width: 100%;
     height: 100%;
+    object-fit: contain;
 
     border-radius: 5px;
     box-shadow: var(--shadow-light);
   }
 }
 
-.model-form {
-  display: grid;
-  position: relative;
-
-  max-width: rem(800);
-  grid-template-columns: repeat(auto-fit, minmax(rem(280), 1fr));
-  gap: rem(30);
-
+.form {
+  gap: rem(15);
   .btn {
-    position: absolute;
-    width: rem(200);
-    bottom: rem(-80);
-    left: 50%;
-    transform: translate(-50%);
-  }
-
-  @include breakpoint-down(medium) {
-    grid-template-columns: repeat(auto-fit, minmax(rem(150), rem(200)));
-  }
-
-  @include breakpoint-down(small) {
-    gap: rem(15);
+    margin-top: rem(20);
   }
 }
