--- a/src/components/VeichleModel/Models.scss
+++ b/src/components/VeichleModel/Models.scss
@@ -18,6 +18,23 @@
     align-items: center;
     justify-content: space-between;
 
+    .form {
+      position: relative;
+      .btn {
+        position: absolute;
+        top: rem(-20);
+        right: 0;
+        padding: rem(8.5) rem(10);
+        svg {
+          font-size: var(--font-400);
+        }
+
+        @include breakpoint-down(smallish) {
+          top: rem(-18.7);
+        }
+      }
+    }
+
     .select {
       margin-bottom: rem(32);
       padding-block: rem(10);
@@ -39,11 +56,18 @@
         }
       }
     }
+
+    .btn {
+      @include breakpoint-down(small) {
+        padding: rem(10) rem(10);
+      }
+    }
   }
   &__search-filter {
     width: rem(300);
     border: 1px solid var(--clr-black);
     border-radius: 0px;
+    position: relative;
 
     @include breakpoint-down(medium) {
       width: rem(200);
