--- a/src/components/VeichleModel/ModelsList.scss
+++ b/src/components/VeichleModel/ModelsList.scss
@@ -1,8 +1,10 @@
 @use '../../common/style/index' as *;
 .models-list {
+  height: 100%;
   position: relative;
   &__container {
-    padding-block: rem(15);
+    padding-block: rem(15) rem(40);
+    position: relative;
 
     width: 100%;
     display: grid;
@@ -35,8 +37,15 @@
 
     &__header {
       display: flex;
+      flex-direction: column;
+      gap: rem(10);
       align-items: center;
+      position: relative;
       justify-content: center;
+
+      @include breakpoint-down(small) {
+        align-items: start;
+      }
     }
     &__title {
       font-size: var(--font-800);
@@ -44,7 +53,23 @@
       font-weight: 500;
     }
 
-    &__filter {
+    &__active-filters {
+      max-width: rem(300);
+      display: flex;
+      gap: rem(10);
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      @include breakpoint-down(small) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
+
+    &__filter-toggle {
+      position: absolute;
+      right: rem(-20);
       cursor: pointer;
       margin-left: auto;
       border-radius: 4px;
@@ -88,6 +113,10 @@
 
       font-size: var(--font-700);
       letter-spacing: 1.25px;
+
+      @include breakpoint-down(smallish) {
+        top: rem(220);
+      }
     }
 
     @include breakpoint-down(medium) {
@@ -103,5 +132,16 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%);
+  }
+
+  &__pagination {
+    position: absolute;
+    bottom: rem(20);
+    left: 57%;
+
+    @include breakpoint-down(smallish) {
+      left: 50%;
+      transform: translate(-50%);
+    }
   }
 }
