Added a root store in mobx, and made seperate stores for the Models and the Makes. Initially added Pagination and Filter stores as well, but it became difficult to manage so all of the logic is held in these two stores which makes them a bit repetative sadly.
Additionally updated the styling of the site, fixed a few noticed bugs
and applied quality of life changes.

--- a/src/components/VeichleCard.scss
+++ b/src/components/VeichleCard.scss
@@ -1,6 +1,7 @@
 @use '../common/style/index' as *;
 .veichle-card {
   position: relative;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -93,6 +94,7 @@
     .veichle-card__img {
       border-radius: 0;
       border: none;
+      object-fit: contain;
       width: rem(125);
       height: rem(100);
     }
