--- a/src/common/style/_reset.scss
+++ b/src/common/style/_reset.scss
@@ -9,11 +9,8 @@
   box-sizing: border-box;
 }
 
-#root {
-  height: 90vh;
-}
-
 body {
+  height: 100%;
   font-size: 16px;
   line-height: 1.5;
   color: var(--clr-black);
