--- a/src/components/Elements/Button.scss
+++ b/src/components/Elements/Button.scss
@@ -13,6 +13,10 @@
     &:hover {
       background-color: rgb(83, 83, 83);
     }
+
+    &:disabled {
+      background-color: rgb(85, 85, 85);
+    }
   }
 
   &--secondary {
@@ -27,6 +31,9 @@
     background-color: var(--clr-red);
     color: white;
     &:hover {
+      background-color: var(--clr-red-light);
+    }
+    &:disabled {
       background-color: var(--clr-red-light);
     }
   }
