--- a/src/components/VeichleForm.scss
+++ b/src/components/VeichleForm.scss
@@ -51,6 +51,14 @@
     border-radius: 5px;
     box-shadow: var(--shadow-light);
   }
+
+  &__error {
+    background-color: var(--clr-red);
+    padding: rem(10) rem(20);
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+  }
 }
 
 .form {
