--- a/src/components/VeichleModel/ModelFilters.scss
+++ b/src/components/VeichleModel/ModelFilters.scss
@@ -3,7 +3,7 @@
 .model-filters {
   display: flex;
   flex-direction: column;
-  gap: rem(30);
+  gap: rem(20);
 
   @include breakpoint-down(smallish) {
     display: none;
@@ -14,6 +14,7 @@
     font-size: var(--font-600);
     letter-spacing: 1.2px;
     font-weight: 400;
+    margin-bottom: rem(30);
   }
   align-self: center;
 }
