Final Update: Refactored the design of the Mobx store moving the filtering and pagination logic into its own services, also added the values of the current make and model into local storage so it does not throw errors when the page refreshes.

--- a/src/components/VeichleForm.scss
+++ b/src/components/VeichleForm.scss
@@ -59,6 +59,16 @@
     text-align: center;
     border-radius: 5px;
   }
+
+  &--empty {
+    font-size: var(--font-800);
+    color: var(--clr-grey-1);
+    font-weight: 400;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+  }
 }
 
 .form {
